--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,25 @@
 <h1>Click the button to find nearest location</h1>
+<%= form_tag search_home_index_path, :id => 'form_user' do %>
+<%= text_field_tag :user_location %>
+<%= submit_tag "Get Location" %>
+
+<% end %>
+
 <%= link_to 'Find', search_home_index_path %>
+
+<script type="text/javascript">
+  function getLocation(){
+    if (navigator.geolocation){
+      navigator.geolocation.getCurrentPosition(function(position){
+        $('#user_location').val(position.coords.latitude + ", " + position.coords.longitude);
+      });
+    }else{
+      alert("Geolocation is not supported by this browser.");
+    }
+  }
+
+  $( document ).ready(function() {
+    getLocation();
+  });
+
+</script>
