--- a/app/views/home/show_direction.html.erb
+++ b/app/views/home/show_direction.html.erb
@@ -1,15 +1,16 @@
-
-  <div id="map_canvas" style="width:100%; height:3000px;"></div>
   <ul id="instructions">
   </ul>
-
+  <p id="Distance" />
+  <div id="map_canvas" style="width:100%; height:700px;"></div>
+  <%= image_tag 'road.png' %>
 <script type="text/javascript">
 var map;
 $(document).ready(function(){
   map = new GMaps({
     el: '#map_canvas',
     lat: <%= @user_location.first %>,
-    lng: <%= @user_location.last %>
+    lng: <%= @user_location.last %>,
+    zoom: 18
   });
 
   map.addMarker({
@@ -19,18 +20,19 @@ $(document).ready(function(){
   });
 
   map.addMarker({
-    lat: <%= @workshop.latitude %>,
-    lng: <%= @workshop.longitude %>,
-    title: '<%= @workshop.name %>'
+    lat: <%= @workshop.location.latitude %>,
+    lng: <%= @workshop.location.longitude %>,
+    title: '<%= @workshop.name %>',
+    icon: "/assets/road.png"
   });
 
   map.travelRoute({
-    origin: <%= @user_location %>,
-    destination: [<%= @workshop.latitude%>, <%= @workshop.longitude %>],
-    travelMode: 'driving',
+    origin: [<%= @user_location.first %>,<%= @user_location.last %>],
+    destination: [<%= @workshop.location.latitude%>, <%= @workshop.location.longitude %>],
+    travelMode: 'walking',
     step: function(e) {
       $('#instructions').append('<li>'+e.instructions+'</li>');
-      $('#instructions li:eq(' + e.step_number + ')').delay(450 * e.step_number).fadeIn(20000, function() {
+      $('#instructions li:eq(' + e.step_number + ')').delay(420 * e.step_number).fadeIn("medium", function() {
         map.drawPolyline({
           path: e.path,
           strokeColor: '#FF0000',
@@ -40,6 +42,25 @@ $(document).ready(function(){
       });
     }
   });
+
+  map.getRoutes({
+      origin: [<%= @user_location.first %>,<%= @user_location.last %>],
+      destination: [<%= @workshop.location.latitude%>, <%= @workshop.location.longitude %>],
+      avoidHighways: false,
+      avoidTolls: false,
+      travelMode: 'DRIVING',
+      unitSystem: "IMPERIAL",
+      callback: function (e) {
+          var time = 0;
+          var distance = 0;
+          for (var i=0; i<e[0].legs.length; i++) {
+              time += e[0].legs[i].duration.value;
+              distance += e[0].legs[i].distance.value;
+          }
+          $('p#Distance').text(distance*0.001 + ' KM');
+      }
+  });
+
 });
 
 
