--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -28,6 +26,7 @@
 
         <% if user_signed_in? %>
           <li><%= link_to "My Workshop", workshops_path, class: "ico services" %></li>
+          <li><%= link_to "Profile", user_path(current_user.id), class: "ico aboutus" %></li>
           <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete  %></li>
         <% end %>
         </li>
