--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,14 @@
-<h1>Click the button to find nearest location</h1>
+<h1></h1>
 <%= form_tag search_home_index_path, :id => 'form_user' do %>
 <%= hidden_field_tag :user_location %>
+<div class="tile">
+<%= image_tag "user/map.svg", :width => "50%", margin: "70%" %>
+            <h3 class="tile-title">Location Finder</h3>
+            <p>Click the button to find nearest location</p>
+            <button class="btn btn-block btn-lg btn-danger" id="trigger" type="submit" disabled>Please wait...</button>
+          </div>
 <%= select_tag(:category, options_from_collection_for_select(Category.all, "id", "name")) %>
-<button type="submit" id="trigger" disabled>Please enable your location sharing</button>
+
 <% end %>
 
 <script type="text/javascript">
