--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -15,7 +15,9 @@
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <%= button_tag(type: 'submit') do %>
+    Sign Up
+  <% end %>
 <% end %>
 
 <%= render "users/shared/links" %>
