--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,14 @@
 <h1></h1>
 <%= form_tag search_home_index_path, :id => 'form_user' do %>
-<%= hidden_field_tag :user_location %>
-<div class="tile">
-<%= image_tag "user/map.svg", :width => "50%", margin: "70%" %>
-            <h3 class="tile-title">Location Finder</h3>
-            <p>Click the button to find nearest location</p>
-            <button class="btn btn-block btn-lg btn-danger" id="trigger" type="submit" disabled>Please wait...</button>
-          </div>
-<%= select_tag(:category, options_from_collection_for_select(Category.all, "id", "name")) %>
+  <%= hidden_field_tag :user_location %>
+    <%= image_tag "user/map.svg", :width => "50%", margin: "70%" %>
+
+
+    <%= select_tag(:category, options_from_collection_for_select(Category.all, "id", "name"),class: "form-control col-lg-12 col-md-12 col-sm-4 col-xs-12") %>
+    <h3 class="tile-title">Location Finder</h3>
+    <p>Click the button to find nearest location</p>
+    <button class="btn btn-block btn-lg btn-danger" id="trigger" type="submit" disabled>Please wait...</button>
+
 
 <% end %>
 
