--- a/app/views/home/show_direction.html.erb
+++ b/app/views/home/show_direction.html.erb
@@ -1,17 +1,26 @@
-  <h3 id="Distance"></h3>
-
-  <div id="instructions_container">
+<div class="containerr">
+  <div class="row">
+    <div class="col-xs-8">.col-md-8</div>
+    <div class="col-xs-4"> 
+      <h2><%= @workshop.name %></h2>
+    </div>
+  </div>
+</div>
+  <div id="instructions_container" class="well well-small">
     <legend class="title"><span>Instructions</span></legend>
     <ul id="instructions"></ul>
   </div>
 
   <legend class="title"><span>Map location</span></legend>
-  <div id="map_canvas" style="height:350px;"></div>
+  <div class="container well">
+    <div id="map_canvas" style="height:350px;"></div>  
+  </div>
   <div class="span6">
+  <hr/>
     <table>
       <% @workshop.comment_threads.each do |comment| %>
       <tr> 
-      <td width="10%"><%= image_tag comment.user.avatar, size:"4x4" %></td>
+      <td width="10%"><%= image_tag comment.user.avatar.thumb.url, size:"4x4" %></td>
       <td align="left"><%= comment.body %></td>
       </tr>
       <% end %>
