--- a/app/views/admin/workshops/index.html.erb
+++ b/app/views/admin/workshops/index.html.erb
@@ -5,11 +5,10 @@
 		<th>Name</th>
 		<th>Address</th>
 		<th>Category</th>
-		<th>Latitude | Longitude</th>
 		<th>Status</th>
-		<th></th>
-		<th></th>
-		<th></th>
+		<th>By</th>
+		<th colspan="3"></th>
+		
 	</thead>
 	<tbody>
 		<% @workshops.includes(:location,:category).each do |workshop| %>
@@ -17,8 +16,20 @@
 			<td><%= workshop.name %></td>
 			<td><%= workshop.address %></td>
 			<td><%= workshop.category.name %></td>
-				<td><%= "#{workshop.location.latitude}, #{workshop.location.longitude}" %></td>
-			<td><%= workshop.status %></td>
+			<td>
+				<% if workshop.status %>
+					<span class="label label-info">Active</span>
+				<% else %>
+					<span class="label label-important">Deactive</span>
+				<% end %>
+			</td>
+			<td>
+			  <% if workshop.creator.class == Admin %>
+			  	<span class="label"><%= workshop.creator.name %></span>
+			  <% else %>
+			  	<%= workshop.creator.name %>
+			  <% end %>
+			</td>
 			<td><%= link_to 'Show', admin_workshop_path(workshop), 'data-no-turbolink' => true %></td>
 			<td><%= link_to 'Edit', edit_admin_workshop_path(workshop), 'data-no-turbolink' => true %></td>
 			<td><%= link_to 'Delete', admin_workshop_path(workshop), method: :delete %></td>
@@ -26,3 +37,4 @@
 		<% end %>
 	</tbody>
 </table>
+<%= will_paginate @workshops %>
