Styling and improving

--- a/app/assets/stylesheets/user/application.css
+++ b/app/assets/stylesheets/user/application.css
@@ -10,5 +10,8 @@
  *
  *= require_self
  *= require jquery.ui.all
- *= require_tree .
+ *= require ./normalize
+ *= require ./bootstrap
+ *= require ./main
+ *= require ./color
  */
