--- a/app/views/home/show_direction.html.erb
+++ b/app/views/home/show_direction.html.erb
@@ -15,10 +15,10 @@
     <% end %>
   </table>
 </div>
-<hr/>
-
+<hr>
 <div id="map_canvas" style="height:550px;"></div>  
-
+<button type="button" class="btn btn-info">Info</button>
+<button type="button" class="btn btn-info">Info</button>
 
 <script type="text/javascript">
 var map;
